# reachy-mini-telegram-speaker

./: .gitignore
reachy_mini_telegram_speaker/: .gitignore  README.md  config.example.json  config.json  index.html  plan.md  pyproject.toml  robot_speech_test.py  robot_wav_test.py  tts_to_wav.py  tts_wav_test.py
reachy_mini_telegram_speaker/reachy_mini_telegram_speaker/: main.py
